maybe fix form on iPhone

--- a/app/assets/stylesheets/subscriptions_layout.css.scss
+++ b/app/assets/stylesheets/subscriptions_layout.css.scss
@@ -16,7 +16,7 @@
     border: 10px solid $brazil-yellow;
 
     form {
-      width: 450px;
+      width: 680px;
       margin-bottom: 20px;
       margin-left: 125px;
       margin-top: -10px;
